fix: 독립 리뷰에서 발견한 재개 안전성 보강